refactor: adds a DTO to serve the responses from searches